// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardTabs should match snapshot when left tab is active 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardTabs
    activeTabIndex={0}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "borderColor": "rgba(150,150,150,0.5)",
              "borderWidth": 0.5,
              "bottom": 0,
              "position": "absolute",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />,
        <RewardTab
          isActive={true}
          label="rewards"
          onPress={[MockFunction]}
        />,
        <Component
          style={
            Object {
              "paddingBottom": 32,
            }
          }
        >
          <Component
            style={
              Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              }
            }
          />
        </Component>,
        <RewardTab
          isActive={false}
          isFlipped={true}
          label="purchased"
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 690,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "borderColor": "rgba(150,150,150,0.5)",
            "borderWidth": 0.5,
            "bottom": 0,
            "position": "absolute",
            "width": "100%",
            "zIndex": -1,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isActive": true,
          "label": "rewards",
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              }
            }
          />,
          "style": Object {
            "paddingBottom": 32,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "borderColor": "rgb(96,96,96)",
              "borderLeftWidth": 1,
              "height": 24,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isActive": false,
          "isFlipped": true,
          "label": "purchased",
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "borderColor": "rgba(150,150,150,0.5)",
                "borderWidth": 0.5,
                "bottom": 0,
                "position": "absolute",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />,
          <RewardTab
            isActive={true}
            label="rewards"
            onPress={[MockFunction]}
          />,
          <Component
            style={
              Object {
                "paddingBottom": 32,
              }
            }
          >
            <Component
              style={
                Object {
                  "borderColor": "rgb(96,96,96)",
                  "borderLeftWidth": 1,
                  "height": 24,
                }
              }
            />
          </Component>,
          <RewardTab
            isActive={false}
            isFlipped={true}
            label="purchased"
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": 690,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "borderColor": "rgba(150,150,150,0.5)",
              "borderWidth": 0.5,
              "bottom": 0,
              "position": "absolute",
              "width": "100%",
              "zIndex": -1,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isActive": true,
            "label": "rewards",
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderColor": "rgb(96,96,96)",
                  "borderLeftWidth": 1,
                  "height": 24,
                }
              }
            />,
            "style": Object {
              "paddingBottom": 32,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isActive": false,
            "isFlipped": true,
            "label": "purchased",
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardTabs should match snapshot when right tab is active 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardTabs
    activeTabIndex={1}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "borderColor": "rgba(150,150,150,0.5)",
              "borderWidth": 0.5,
              "bottom": 0,
              "position": "absolute",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />,
        <RewardTab
          isActive={false}
          label="rewards"
          onPress={[MockFunction]}
        />,
        <Component
          style={
            Object {
              "paddingBottom": 32,
            }
          }
        >
          <Component
            style={
              Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              }
            }
          />
        </Component>,
        <RewardTab
          isActive={true}
          isFlipped={true}
          label="purchased"
          onPress={[MockFunction]}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 690,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "borderColor": "rgba(150,150,150,0.5)",
            "borderWidth": 0.5,
            "bottom": 0,
            "position": "absolute",
            "width": "100%",
            "zIndex": -1,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isActive": false,
          "label": "rewards",
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              }
            }
          />,
          "style": Object {
            "paddingBottom": 32,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "borderColor": "rgb(96,96,96)",
              "borderLeftWidth": 1,
              "height": 24,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isActive": true,
          "isFlipped": true,
          "label": "purchased",
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "borderColor": "rgba(150,150,150,0.5)",
                "borderWidth": 0.5,
                "bottom": 0,
                "position": "absolute",
                "width": "100%",
                "zIndex": -1,
              }
            }
          />,
          <RewardTab
            isActive={false}
            label="rewards"
            onPress={[MockFunction]}
          />,
          <Component
            style={
              Object {
                "paddingBottom": 32,
              }
            }
          >
            <Component
              style={
                Object {
                  "borderColor": "rgb(96,96,96)",
                  "borderLeftWidth": 1,
                  "height": 24,
                }
              }
            />
          </Component>,
          <RewardTab
            isActive={true}
            isFlipped={true}
            label="purchased"
            onPress={[MockFunction]}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": 690,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "borderColor": "rgba(150,150,150,0.5)",
              "borderWidth": 0.5,
              "bottom": 0,
              "position": "absolute",
              "width": "100%",
              "zIndex": -1,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isActive": false,
            "label": "rewards",
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderColor": "rgb(96,96,96)",
                  "borderLeftWidth": 1,
                  "height": 24,
                }
              }
            />,
            "style": Object {
              "paddingBottom": 32,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "borderColor": "rgb(96,96,96)",
                "borderLeftWidth": 1,
                "height": 24,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isActive": true,
            "isFlipped": true,
            "label": "purchased",
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
